# rpi-weather-eink

./: .gitignore  Cargo.toml  Cross.toml  README.md  config.example.toml  config.toml
.github/workflows/: ci.yml
deploy/: deploy.sh  eink-daemon.service  eink.service  eink.timer
src/: canvas.rs  config.rs  health.rs  lib.rs
src/output/: epaper.rs  mod.rs
src/render/: icons.rs  mod.rs
src/weather/: geocode.rs  met_no.rs  mod.rs  model.rs  open_meteo.rs
